# DisGal

./: .gitignore  .gitmodules  README.md  build1DAdvDG.bat  build1DBE.bat  buildPoisson.bat  buildPoisson_dG.bat  buildStokes.bat
Burger/: 1D.cpp  plot1D.py
Dependencies/Eigen/src/SparseLU/: SparseLU.h
Dependencies/Utils/: Utils.cpp  Utils.hpp
Diffusion/: CMakeLists.txt  convergence.cpp  convergence.py  mainTest.cpp  mainTestPoissondG.cpp  mainTestSplitCell.cpp  plot.py  plot1.py  plotp1d.py  quadtree.json  testEigenConstr.cpp
Diffusion/include/: MatrixAssembly.hpp
Diffusion/src/: MatrixAssembly.cpp  MatrixAssemblydG.cpp
LinearAdvection/: 1D.cpp  1DBE.cpp  CMakeLists.txt  common.cpp  common.hpp  plot1D.py  plot1DBE.py  plotmesh.py  testMap.cpp
NavierStokes/: buildStokes.sh  mainStokes.cpp  plot.py  plotStokes.py  test.py  testEigenSparseIter.cpp
NavierStokes/Meshing/: Meshing.hpp
NavierStokes/Meshing/include/: BasicMesh2D.hpp
NavierStokes/Meshing/src/: BasicMesh2D.cpp
NavierStokes/include/: MatrixAssembly.hpp  NSMatrixAssembly.hpp
NavierStokes/src/: MatrixAssembly.cpp  NSMatrixAssembly.cpp
NavierStokes/test/: gridMeshTest.cpp
Utils/: Utils.cpp  Utils.hpp  Utils.py
